<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="@dimen/margin_16"
    android:background="@color/variant"
    >

    <ScrollView
        android:id="@+id/buttonsScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:scrollbars="horizontal"
        >
       <HorizontalScrollView
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               app:layout_constraintTop_toTopOf="parent"
               android:orientation="horizontal"
               >
               <androidx.appcompat.widget.AppCompatButton
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/binary"
                   android:background="@drawable/converter_buttons_selector"
                   android:layout_marginEnd="@dimen/margin_4"
                   android:textColor="@color/white"
                   />

               <androidx.appcompat.widget.AppCompatButton
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/decimal"
                   android:background="@drawable/converter_buttons_selector"
                   android:layout_marginEnd="@dimen/margin_4"
                   android:textColor="@color/white"
                   />

               <androidx.appcompat.widget.AppCompatButton
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/octal"
                   android:background="@drawable/converter_buttons_selector"
                   android:layout_marginEnd="@dimen/margin_4"
                   android:textColor="@color/white"
                   />

               <androidx.appcompat.widget.AppCompatButton
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/hexa"
                   android:background="@drawable/converter_buttons_selector"
                   android:layout_marginEnd="@dimen/margin_4"
                   android:textColor="@color/white"
                   />
           </LinearLayout>

       </HorizontalScrollView>

    </ScrollView>

    <FrameLayout
        android:id="@+id/mainFrame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/buttonsScroll"
        />

</androidx.constraintlayout.widget.ConstraintLayout>