<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/variant"
    tools:context=".fragments.BinaryFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/octalEditText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent=".2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/binaryLinear"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_octal"
            android:inputType="number"
            android:digits="01234567"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/binaryLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/view1"
        app:layout_constraintTop_toBottomOf="@id/octalEditText"
        android:layout_marginTop="@dimen/margin_20"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_4"
            android:text="@string/decimalTitle"
            android:textColor="@color/lightGrey"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/decimalValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/lightGrey"
            android:textSize="16sp" />

    </LinearLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_20"
        android:background="@color/secondary"
        app:layout_constraintTop_toBottomOf="@id/binaryLinear" />

    <LinearLayout
        android:id="@+id/decimalLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/view2"
        app:layout_constraintTop_toBottomOf="@id/view1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_4"
            android:text="@string/binary_title"
            android:textColor="@color/lightGrey"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/binaryValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/lightGrey"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/margin_10"
        android:layout_marginVertical="@dimen/margin_20"
        android:background="@color/secondary"
        app:layout_constraintTop_toBottomOf="@id/decimalLinear" />

    <LinearLayout
        android:id="@+id/hexaLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/view2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_4"
            android:text="@string/hexaTitle"
            android:textColor="@color/lightGrey"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/hexaValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/lightGrey"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/clearButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/hexaLinear"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginHorizontal="@dimen/margin_20"
        android:background="@drawable/convert_shape"
        android:text="@string/clear"
        />

</androidx.constraintlayout.widget.ConstraintLayout>